syntax = "proto3";

option csharp_namespace = "gRPC";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting

}
service EmployeeCRUD{
	rpc SelectAll (Empty) returns (Employees);
	rpc SelectByID (EmployeeFilter) returns (Employee);
	rpc Insert (Employee) returns (Empty);
	rpc Update (Employee) returns (Empty);
	rpc Delete (EmployeeFilter) returns (Empty);
}
message Empty {}
message Employee { 
	int32 employeeID = 1;
	string firstName = 2;
	string lastName = 3;
}
message Employees
{
  repeated Employee items = 1;
}
message EmployeeFilter{
int32 employeeID = 1;
}


